--- a/graph.html
+++ b/graph.html
@@ -3,7 +3,7 @@
     <title>Web Visualizer</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script
-        src="http://d3js.org/d3.v3.min.js"
+        src="d3.v3.min.js"
         charset="utf-8">
     </script>
     <script
