replace total's label on toggle link

--- a/graph.html
+++ b/graph.html
@@ -169,7 +169,7 @@
                         d3.select('#overlay-title').text("XSS");
                         break;
                     case 1:
-                        d3.select('#overlay-title').text("TOTAL");
+                        d3.select('#overlay-title').text("BOTH");
                         break;
                     case 2:
                         create_pie(nodes, "sqli");
