--- a/graph.html
+++ b/graph.html
@@ -32,7 +32,7 @@
             <text class="legend-text" x="75" y="495"> NO ERROR </text>
             <text class="legend-text" x="75" y="525"> ARACHNI </text>
             <text class="legend-text" x="75" y="555"> SKIPFISH </text>
-            <text class="legend-text" x="75" y="585"> WAPITY </text>
+            <text class="legend-text" x="75" y="585"> WAPITI </text>
 
             <g id="graph"></g>
         </svg>
