--- a/graph.html
+++ b/graph.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Web Visualizer</title>
+    <title>Vulnerabilities Visualizer</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script
         src="d3.v3.min.js"
