add css and placeholder message

--- a/graph.html
+++ b/graph.html
@@ -49,26 +49,9 @@
         </div>
         <div id="info-board">
             <div id="url-container">
-                Example.com
+                CLICK A NODE
             </div>
             <div id="list-container">
-                <ul>
-                    <li id="wapiti-list" class="wapiti-text-color">WAPITI
-                    <ul>
-                    </ul>
-                    </li>
-                    <hr>
-                    <li id="skipfish-list" class="skipfish-text-color">SKIPFISH
-                    <ul>
-                    </ul>
-                    </li>
-                    <hr>
-                    <li id="arachni-list" class="arachni-text-color">ARACHNI
-                    <ul>
-                    </ul>
-                    </li>
-
-                </ul>
             </div>
         </div>
     </div>
