--- a/graph.html
+++ b/graph.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Vulnerabilities Visualizer</title>
+    <title>Sakura Vulnerabilities Visualizer</title>
     <link rel="stylesheet" type="text/css" href="css\styles.css">
     <link rel="stylesheet" type="text/css" href="css\jquery.custom-scrollbar.css">
     <script
