--- a/graph.html
+++ b/graph.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="utf-8">
     <title>Sakura Vulnerabilities Visualizer</title>
     <link rel="stylesheet" type="text/css" href="css\styles.css">
     <link rel="stylesheet" type="text/css" href="css\jquery.custom-scrollbar.css">
