remove toogle event and add dropdownlist

--- a/graph.html
+++ b/graph.html
@@ -56,4 +56,11 @@
             </div>
         </div>
     </div>
+    <div id="control-panel">
+        <select id="mode-select">
+          <option value="SQLI">SQLI</option>
+          <option value="XSS">XSS</option>
+          <option value="BOTH">BOTH</option>
+        </select>
+    </div>
 </body>
